objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <label>Activity_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Status__c</fullName>
        <label>Applicant Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save for Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts_to_Contact__c</fullName>
        <label>Attempts to Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_to_work_in_US__c</fullName>
        <label>Authorized to work in US</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBB_Page__c</fullName>
        <label>BBB Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BBB_Rating__c</fullName>
        <label>BBB Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Lead_Date__c</fullName>
        <label>Bad Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bad_Lead_Detail__c</fullName>
        <label>Lead Status Detail</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Bad / Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible Pro Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted Pro Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Data (Wrong Address, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrelated Business Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Experience with online marketing/lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t give a reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t know Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t want marketing/lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has enough jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung up quickly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired or Retiring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied with Current Solution for Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlicensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor BBB Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No E-mail Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bad_Lead_Identified__c</fullName>
        <label>Bad Lead Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bad_Lead_Marked_by_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Lead Marked by Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Number_Detail__c</fullName>
        <label>Bad Number Detail</label>
        <picklist>
            <controllingField>Bad_Lead_Detail__c</controllingField>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonding_Amount__c</fullName>
        <label>Bonding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonding_Company__c</fullName>
        <label>Bonding Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonding_Expiration__c</fullName>
        <label>Bonding Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonding_No__c</fullName>
        <label>Bonding No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <label>Business Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBSA_Fips__c</fullName>
        <label>CBSA Fips</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSA_Name__c</fullName>
        <label>CBSA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Score__c</fullName>
        <description>Lead score for % chance of being a commercial lead</description>
        <label>Commercial Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Key_Copy__c</fullName>
        <description>Not to be displayed on the page; created to not allow accidental merging of accounts upon conversion</description>
        <formula>Porch_com_Company_Key_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Key Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_Population_del__c</fullName>
        <formula>County2__r.County_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Not satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not recommend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distance_from_Lowe_s_Miles__c</fullName>
        <label>Distance from Lowe&apos;s (Miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Recycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Recycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Score__c</fullName>
        <description>Calculated Score based on Zip Code Slots, Ability to Serve and Demographic Data</description>
        <inlineHelpText>Calculated Score based on Zip Code Slots, Ability to Serve and Demographic Data</inlineHelpText>
        <label>Geo Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homeowner_Contacts__c</fullName>
        <label>Homeowner Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration__c</fullName>
        <label>Insurance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Mid_Market__c</fullName>
        <formula>IF( 
    AND
        (
         AnnualRevenue &gt;= 3
         )
,TRUE
,FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mid Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Activity_Date__c</fullName>
        <label>Last Completed Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Activity_Subject__c</fullName>
        <label>Last Completed Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Activity_Type__c</fullName>
        <label>Last Completed Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Update__c</fullName>
        <label>Last Status Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <label>Lead Grade</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Overall Lead Score for Pro</description>
        <inlineHelpText>Score given to Pro to provide insight  into the likelihood of becoming a Porch client.</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Amount__c</fullName>
        <label>Liability Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Co__c</fullName>
        <label>Liability Insurance Co.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Policy_Number__c</fullName>
        <label>Liability Insurance Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Expiration__c</fullName>
        <label>Licensing Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lowe_s_Within_County__c</fullName>
        <label>Lowe&apos;s Within County</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <description>Metro Service Area</description>
        <inlineHelpText>Metro Service Area</inlineHelpText>
        <label>MSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Cookie__c</fullName>
        <label>Marketo Cookie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Import_Number__c</fullName>
        <label>Migration Import Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Mobile_Copy__c</fullName>
        <label>Mobile Copy</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   Phone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Signal__c</fullName>
        <description>No Signal received from website check</description>
        <label>No Signal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Calls_Attempted__c</fullName>
        <label>No. of Calls Attempted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Detail__c</fullName>
        <label>Not Interested Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Experience with online marketing/lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t give a reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t know Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t want online marketing/lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has enough Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung up quickly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May be interested at a later date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enough Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired or Retiring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied with Current Solution for Lead Gen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Call_Activities__c</fullName>
        <label>Number of Completed Call Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOB_Score__c</fullName>
        <description>Lead Scoring for chance of OOB status</description>
        <label>OOB Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Phone_Number__c</fullName>
        <description>Captures phone number when an update is made</description>
        <label>Old Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Online_Advertising__c</fullName>
        <label>Online Advertising?</label>
        <picklist>
            <picklistValues>
                <fullName>Angie&apos;s List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuildZoom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Adwords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Advisor (Featured)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houzz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RedBeacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Magic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thumbtack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Detail__c</fullName>
        <label>Other Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerType__c</fullName>
        <formula>IF(  BEGINS(OwnerId, &quot;00G&quot;) , &quot;Queue Owner&quot;, &quot;Individual Owner&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PorchURL__c</fullName>
        <label>PorchURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Porch_Assist_Date__c</fullName>
        <label>Porch Assist Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Porch_Created_Date__c</fullName>
        <description>Added to track when lead/account was created on the platform.</description>
        <label>Porch Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Porch_com_Company_Key_ID__c</fullName>
        <externalId>true</externalId>
        <label>Porch.com Company Key ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Status__c</fullName>
        <label>Pro Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Type__c</fullName>
        <label>Pro Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appliance Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awning Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathtub Refinishing &amp; Liners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpet &amp; Upholstery Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpet Installers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete &amp; Foundation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decking Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design &amp; Build Firms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drywall Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fencing Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flooring Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Door Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gutter Specialists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardscape &amp; Stonework Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Inspectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Theater &amp; TV Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Designers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Views__c</fullName>
        <label>Profile Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectCount__c</fullName>
        <label>ProjectCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Views__c</fullName>
        <label>Project Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <picklist>
            <picklistValues>
                <fullName>Not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t pass reference check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t pass background check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recycle_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Switch which triggers recycling workflows</description>
        <label>Recycle Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recycle_Counter__c</fullName>
        <label>Recycle Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recycle_Date__c</fullName>
        <description>This field indicates the date that this lead was last recycled on.</description>
        <label>Recycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Link__c</fullName>
        <formula>&quot;https://na16.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Impressions__c</fullName>
        <label>Search Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_Tool_Link__c</fullName>
        <formula>&quot;https://back.porch.com/sales/&quot;&amp;Porch_com_Company_Key_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Tool Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Skype_ID__c</fullName>
        <label>Skype ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppressed Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_To_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Protype__c</fullName>
        <formula>if(
    or(
ispickval(Pro_Type__c, &apos;General Contractors&apos;)
,ispickval(Pro_Type__c, &apos;HVAC Contractors&apos;)
,ispickval(Pro_Type__c, &apos;Electricians&apos;)
,ispickval(Pro_Type__c, &apos;Painters&apos;)
,ispickval(Pro_Type__c, &apos;Remodeling Contractors&apos;)
,ispickval(Pro_Type__c, &apos;Plumbers&apos;)
,ispickval(Pro_Type__c, &apos;Roofers&apos;)
,ispickval(Pro_Type__c, &apos;Landscapers&apos;)
,ispickval(Pro_Type__c, &apos;Handyman&apos;)
,ispickval(Pro_Type__c, &apos;Flooring Contractors&apos;)
,ispickval(Pro_Type__c, &apos;Window Contractors&apos;)
,ispickval(Pro_Type__c, &apos;Home Cleaners&apos;)
      )
,1
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Protype</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>